Fix facet interaction on mobile (#2146)
* only add listeners if buttons exist

* fix selectors

--- a/apps/site/assets/css/_search.scss
+++ b/apps/site/assets/css/_search.scss
@@ -383,13 +383,12 @@
 .c-search__close-modal-button {
   color: $brand-primary;
   cursor: pointer;
-  display: none;
   float: right;
   padding-right: $base-spacing;
   text-align: right;
 
-  @include media-breakpoint-down(sm) {
-    display: block;
+  @include media-breakpoint-up(md) {
+    display: none;
   }
 }
 
